--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <title>Akan Name</title>
 </head>
 <body>
-    <p>Hello</p>
+    <form id="akanForm">
+        <label for="birthdate">Enter your birthdate:</label>
+        <input type="date" id="birthdate" name="birthdate">
+        <label for="gender">Select your gender:</label>
+        <select id="gender" name="gender">
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+        </select>
+        <button type="button" onclick="calculateAkanName()">Calculate</button>
+        <p id="akanResult"></p>
+    </form>
+    <script>
+        function calculateAkanName() {
+            console.log("I have been clicked")
+        }
+    </script>
 </body>
 </html>
