--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/styles.css" rel="stylesheet" type="text/css" />
     <title>Akan Name</title>
 </head>
+
 <body>
     <form id="akanForm">
         <label for="birthdate">Enter your birthdate:</label>
@@ -19,8 +21,11 @@
     </form>
     <script>
         function calculateAkanName() {
-            console.log("I have been clicked")
+            const birthdate = new Date(document.getElementById("birthdate").value);
+            const gender = document.getElementById("gender").value;
+            console.log("I have been clicked", birthdate, gender)
         }
     </script>
 </body>
+
 </html>
