render akan name on browser

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
                         break;
                 }
             }
-            console.log(" akanName ..", akanName)
+            // console.log(" akanName ..", akanName)
+            document.getElementById("akanResult").innerText = `You were born on a ${dayOfWeek}, your Akan name is ${akanName}.`;
         }
     </script>
 </body>
