--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
             const gender = document.getElementById("gender").value;
             const birthdateError = document.getElementById("birthdateError");
 
-            if (isNaN(birthdate.getTime())) {
-                alert("Please enter a valid birthdate.");
+            // if (isNaN(birthdate.getTime())) {
+            //     alert("Please enter a valid birthdate.");
+            //     return;
+            // }
+
+            if (!isValidDate(birthdate)) {
+                birthdateError.innerText = "Please enter a valid birthdate.";
                 return;
+            } else {
+                birthdateError.innerText = "";
             }
 
             const daysOfWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
@@ -86,6 +93,9 @@
                 }
             }
             document.getElementById("akanResult").innerText = `You were born on a ${dayOfWeek}, your Akan name is ${akanName}.`;
+        }
+        function isValidDate(date) {
+            return !isNaN(date.getTime());
         }
     </script>
 </body>
