--- a/index.html
+++ b/index.html
@@ -13,29 +13,40 @@
         <input type="date" id="birthdate" name="birthdate" required>
         <div id="birthdateError" class="error"></div>
         <label for="gender">Select your gender:</label>
-        <select id="gender" name="gender">
+        <select id="gender" name="gender" required>
+            <option value="">Select Gender</option>
             <option value="male">Male</option>
             <option value="female">Female</option>
         </select>
+        <div id="genderError" class="error"></div>
         <button type="button" onclick="calculateAkanName()">Calculate</button>
         <p id="akanResult"></p>
     </form>
+
     <script>
         function calculateAkanName() {
             const birthdate = new Date(document.getElementById("birthdate").value);
             const gender = document.getElementById("gender").value;
             const birthdateError = document.getElementById("birthdateError");
+            const genderError = document.getElementById("genderError");
+            const currentDate = new Date();
 
-            // if (isNaN(birthdate.getTime())) {
-            //     alert("Please enter a valid birthdate.");
-            //     return;
-            // }
+            birthdateError.innerText = "";
+            genderError.innerText = "";
 
             if (!isValidDate(birthdate)) {
                 birthdateError.innerText = "Please enter a valid birthdate.";
                 return;
-            } else {
-                birthdateError.innerText = "";
+            }
+
+            if (birthdate > currentDate) {
+                birthdateError.innerText = "Birthdate cannot be in the future.";
+                return;
+            }
+
+            if (gender !== "male" && gender !== "female") {
+                genderError.innerText = "Please select a gender.";
+                return;
             }
 
             const daysOfWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
@@ -92,8 +103,10 @@
                         break;
                 }
             }
+
             document.getElementById("akanResult").innerText = `You were born on a ${dayOfWeek}, your Akan name is ${akanName}.`;
         }
+
         function isValidDate(date) {
             return !isNaN(date.getTime());
         }
