--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <form id="akanForm">
+        <p>Akan App takes a birthday, a gender & outputs relevant Akan Name.</p>
         <label for="birthdate">Enter your birthdate:</label>
         <input type="date" id="birthdate" name="birthdate" required>
         <div id="birthdateError" class="error"></div>
